--- a/config/database.yml
+++ b/config/database.yml
@@ -11,22 +11,25 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
+  charset: utf8mb4
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
+  host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
+  username: <%= ENV['DATABASE_USERNAME'] || root %>
   password: <%= ENV['DATABASE_PASSWORD'] || 123456 %>
-  socket: /tmp/mysql.sock
+  socket:   <%= ENV['DATABASE_SOCKET'] || '/tmp/mysql.sock' %>
 
 development:
   <<: *default
-  database: CG-ASIA_development
+  database: <%= ENV['DATABASE_DEV'] || 'CG-ASIA_development' %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: CG-ASIA_test
+  database: <%= ENV['DATABASE_TEST'] || 'CG-ASIA_test' %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +52,5 @@ test:
 #
 production:
   <<: *default
-  database: CG-ASIA_production
-  username: CG-ASIA
-  password: <%= ENV['CG-ASIA_DATABASE_PASSWORD'] %>
+  pool: 5
+  database: <%= ENV['DATABASE_PRO'] || 'CG-ASIA_production' %>
